# RP2040-HAT-FREERTOS-C

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/sensor/: CMakeLists.txt  README.md  sensor.c
examples/sensor/sensors/lis2dh12/: lis2dh12.c  lis2dh12.h
examples/sensor/sensors/mpu6050/: mpu6050.c  mpu6050.h
examples/sensor/sensors/sht3x/: sht3x.c
examples/sensor/tcp/: tcp.c
examples/sensor_monitor/: CMakeLists.txt  README.md  sensor_monitor.c
examples/sensor_monitor/tcp/: tcp.h
libraries/: CMakeLists.txt
libraries/sensors/: sensors_rough.h
libraries/sensors/lis2dh12/: lis2dh12.c  lis2dh12.h
libraries/sensors/mpu6050/: mpu6050.c
libraries/sensors/sht3x/: sht3x.c  sht3x.h
port/: CMakeLists.txt
port/sensors/: sensors.c  sensors.h
